[project]
name = "decompiler-25spring-door-quiz"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "junah201", email = "junah.dev@gmail.com"},
]
dependencies = ["nexify[cli]==0.7.3"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "PRIVATE"}


[tool.pdm]
distribution = false
